--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sudoku</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="./img/icon/sudoku.png">
 </head>
 <body>
     <div class="container">
